fixed mistaken bug

--- a/emailops-build/roles/build-zimbra/templates/unattended.j2
+++ b/emailops-build/roles/build-zimbra/templates/unattended.j2
@@ -1,6 +1,6 @@
-CREATEADMIN="admin@{{ client_name }}.{{ datacenter }}.synacor.com"
-CREATEDOMAIN="{{ client_name }}.{{ datacenter }}.synacor.com"
-DOCREATEDOMAIN="{{ do_create_domain }}"
+CREATEADMIN=admin@{{ client_name }}.{{ datacenter }}.synacor.com
+CREATEDOMAIN={{ client_name }}.{{ datacenter }}.synacor.com
+DOCREATEDOMAIN={{ do_create_domain }}
 IMAPPORT=7143
 IMAPSSLPORT=7993
 POPPORT=7110
@@ -8,28 +8,28 @@ POPSSLPORT=7995
 DOTRAINSA=no
 ENABLEDEFAULTBACKUP=no
 EXPANDMENU=no
-HOSTNAME="{{ hostvars[inventory_hostname]['ansible_fqdn'] }}"
-JAVAHOME="{{ install_dir }}/java"
-LDAPHOST="{{ ldap_host }}"
+HOSTNAME={{ hostvars[inventory_hostname]['ansible_fqdn'] }}
+JAVAHOME={{ install_dir }}/java
+LDAPHOST={{ ldap_host }}
 MODE=http
 UPGRADE=no
 REMOVE=no
 RUNAV=no
 RUNSA=no
-SMTPDEST="admin@{{ smtp_dest }}"
-SMTPHOST="{{ smtp_host }}"
+SMTPDEST={{ smtp_dest }}
+SMTPHOST={{ smtp_host }}
 SMTPNOTIFY=no
-SMTPSOURCE="admin@{{ smtp_source }}"
-SPELLURL="http://{{ hostvars[inventory_hostname]['ansible_fqdn'] }}:7780/aspell.php"
+SMTPSOURCE={{ smtp_source }}
+SPELLURL=http://{{ hostvars[inventory_hostname]['ansible_fqdn'] }}:7780/aspell.php
 STARTSERVERS=yes
 USEIMAPPROXY=no
 USESPELL=yes
-CREATEADMINPASS="{{ admin_password }}"
-LDAPADMINPASS="{{ ldap_password }}"
-LDAPROOTPASS="{{ ldap_password }}"
-LDAPREPPASS="{{ ldap_password }}"
-LDAPPOSTPASS="{{ ldap_password }}"
-LDAPAMAVISPASS="{{ ldap_password }}"
-ldap_nginx_password="{{ ldap_password }}"
-ldap_bes_searcher_password="{{ ldap_password }}"
+CREATEADMINPASS={{ create_admin_pass }}
+LDAPADMINPASS={{ ldap_admin_pass }}
+LDAPROOTPASS={{ ldap_root_pass }}
+LDAPREPPASS={{ ldap_rep_pass }}
+LDAPPOSTPASS={{ ldap_post_pass }}
+LDAPAMAVISPASS={{ ldap_amavis_pass }}
+ldap_nginx_password={{ ldap_nginx_password }}
+ldap_bes_searcher_password={{ ldap_bes_searcher_password }}
 zimbra_require_interprocess_security=0
