--- a/buildDNS/roles/configure/templates/named.conf.j2
+++ b/buildDNS/roles/configure/templates/named.conf.j2
@@ -1,39 +1,49 @@
-#=====  FUNCTION  =============================================================
-#          NAME:  named.conf
-#   DESCRIPTION:  Master BIND nameserver configuration file
+#===== CONFIGURATION  =============================================================
+#                 NAME:  named.conf
+#   DESCRIPTION: BIND nameserver configuration file
 #
-#          NOTE:  {{ ansible_managed }}
+#                  NOTE:  {{ ansible_managed }}
 #==============================================================================
+{% if not is_master %}
+  acl "masters" {
+    {% for master in master_hosts %}
+      {{ master }};
+    {% endfor %}
+{% endif %}
 
 acl "localhost" {
-    0.0.9.0/8;
+    127.0.0.1/8;
     localhost;
 };
 
 acl "internal" {
-    {{ bind_internal_acl }};
+  {% for host in internal_hosts %}
+    {{ host }};
+  {% endfor %}
 };
 
 options {
-    version                     "0.0";
-    listen-on                   port 53 { {{ bind_listen_ipv4|join(';') }}; };
-    hostname                    "{{ bind_host_name }};";
-    directory                   "/namedb";
-    dump-file                   "/var/run/cache_dump.db";
-    statistics-file             "/var/run/named_stats.txt";
+    version                            "0.0";
+    listen-on                          port 53 { "{{ hostvars['{{ inventory_hostname }}']['ansible_default_ipv4']['address'] }}"; };
+    hostname                        "{{ hostvars['{{ inventory_hostname }}']['ansible_default_ipv4']['address'] }}";
+    directory                          "/namedb";
+    dump-file                         "/var/run/cache_dump.db";
+    statistics-file                   "/var/run/named_stats.txt";
     memstatistics-file          "/var/run/named_mem_stats.txt";
-    pid-file                    "/var/run/named.pid";
-    query-source                address {{ bind_listen_ipv4 }};
-    dnssec-enable               yes;
-    dnssec-validation           yes;
+    pid-file                              "/var/run/named.pid";
+    query-source                   address "{{ hostvars['{{ inventory_hostname }}']['ansible_default_ipv4']['address'] }}";
+    dnssec-enable                 yes;
+    dnssec-validation            yes;
     dnssec-lookaside            . trust-anchor dlv.isc.org;
-    min-refresh-time            3600;
-    max-refresh-time            86400;
-    allow-transfer              { {{ bind_allow_transfer }} };
-    transfer-source             {{ bind_listen_ipv4 }};
-    transfers-in                100;
-    transfers-per-ns            10;
-    transfer-format             many-answers;
+    min-refresh-time              3600;
+    max-refresh-time             86400;
+    {% if is_master %}
+      allow-transfer                 { {{ bind_allow_transfer }} };
+      transfer-source              "{{ hostvars['{{ inventory_hostname }}']['ansible_default_ipv4']['address'] }}";
+      transfers-in                     100;
+      transfers-per-ns             10;
+      transfer-format               many-answers;
+  {% endfor %}
 };
 
 logging {
@@ -108,13 +118,17 @@ logging {
     category xfer-in            { txfr_log; };
     category queries            { query_log; };
     category security           { security_log; };
-    category dnssec             { dnssec_log; };
-    category update             { update_log; };
+    category dnssec                   { dnssec_log; };
+    category update                   { update_log; };
     category update-security    { update_log; };
 };
 
 controls {
-    inet * port 10953 allow { "localhost"; } keys { rndc-key; };
+  {% if is_master %}
+    inet * port 10953 allow { "localhost"; } keys { {{ rndc-key }}; };
+  {% else %}
+    inet * port 10953 allow { "internal"; } keys { {{ remote-key }}; };
+  {% endfor %}
 };
 
 # include security keys
@@ -145,14 +159,14 @@ view "localhost" {
 
     zone "localhost" in {
         type                    master;
-        file                    "master/named.local";
+        file                    "named.local";
         allow-update            { none; };
         allow-transfer          { none; };
     };
 
     zone "0.0.127.in-addr.arpa" in {
         type                    master;
-        file                    "master/0.0.127.in-addr.arpa";
+        file                    "0.0.127.in-addr.arpa";
         allow-update            { none; };
         allow-transfer          { none; };
     };
