--- a/distributeProfile/roles/installProfile/templates/ssh/config.j2
+++ b/distributeProfile/roles/installProfile/templates/ssh/config.j2
@@ -1,3 +1,9 @@
+#======  ANSIBLE  ============================================================
+#          NAME:  config.j2
+#   DESCRIPTION:  User SSH configuration template
+#         NOTES:  {{ ansible_managed }}
+#==============================================================================
+---
 Host github.com
     HostName                    = github.com
     User                        = git
