--- a/distributeProfile/roles/installProfile/templates/eSolutionsCore/config/ServiceConfig.j2
+++ b/distributeProfile/roles/installProfile/templates/eSolutionsCore/config/ServiceConfig.j2
@@ -1,3 +1,8 @@
+//======  ANSIBLE  ============================================================
+//          NAME:  ServiceConfig.j2
+//   DESCRIPTION:  eSolutionsCore configuration
+//         NOTES:  {{ ansible_managed }}
+//==============================================================================
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system-config>
