Nothing to see here, move along

--- a/emailops-build/roles/build-ecelerity/templates/auth.j2
+++ b/emailops-build/roles/build-ecelerity/templates/auth.j2
@@ -1,3 +1,7 @@
+#=====  ANSIBLE   =============================================================
+#          NAME:  build-ecelerity/templates/auth.j2
+#   DESCRIPTION:  "{{ ansible_managed }}"
+#==============================================================================
 require('msys.core');
 require('msys.datasource');
 require('msys.db');
