--- a/emailops-build/roles/build-ecelerity/templates/client_vars.j2
+++ b/emailops-build/roles/build-ecelerity/templates/client_vars.j2
@@ -1,3 +1,7 @@
+#=====  ANSIBLE   =============================================================
+#          NAME:  build-ecelerity/templates/client_vars.j2
+#   DESCRIPTION:  "{{ ansible_managed }}"
+#==============================================================================
 ####################################################################
 #   CLIENT VARS                                                    #
 #       This sections contains all of the clients indetification   #
