--- a/emailops-build/roles/build-ecelerity/templates/mta.j2
+++ b/emailops-build/roles/build-ecelerity/templates/mta.j2
@@ -1,8 +1,7 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  templates/mta.j2
+#          NAME:  build-ecelerity/templates/mta.j2
 #   DESCRIPTION:  "{{ ansible_managed }}"
 #==============================================================================
-
 $selections = {
   'cloudmark' => 'y',
   'beik' => 'n',
