--- a/emailops-build/roles/build-nginx/templates/auth.j2
+++ b/emailops-build/roles/build-nginx/templates/auth.j2
@@ -1,3 +1,7 @@
+#=====  ANSIBLE   =============================================================
+#          NAME:  build-nginx/templates/auth.j2
+#   DESCRIPTION:  "{{ ansible_managed }}"
+#==============================================================================
 <?php
     // Configuration
     $ldap_host = "ldap://{{ ldap_host }}:389/";
