--- a/emailops-build/roles/build-ecelerity/templates/ecmgr.j2
+++ b/emailops-build/roles/build-ecelerity/templates/ecmgr.j2
@@ -1,5 +1,5 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  templates/ecmgr.j2
+#          NAME:  build-ecelerity/templates/ecmgr.j2
 #   DESCRIPTION:  "{{ ansible_managed }}"
 #==============================================================================
 $selections = {
