we will try this.

--- a/emailops-build/roles/build-zimbra/templates/unattended.j2
+++ b/emailops-build/roles/build-zimbra/templates/unattended.j2
@@ -34,7 +34,7 @@ LDAPROOTPASS={{ ldap_root_pass }}
 LDAPREPPASS={{ ldap_rep_pass }}
 LDAPPOSTPASS={{ ldap_post_pass }}
 LDAPAMAVISPASS={{ ldap_amavis_pass }}
-INSTALL_PACKAGES='{{ install_packages }}'
+INSTALL_PACKAGES='{{ packages }}'
 ldap_nginx_password={{ ldap_nginx_password }}
 ldap_bes_searcher_password={{ ldap_bes_searcher_password }}
 zimbra_require_interprocess_security=0
