--- a/emailops-build/roles/build-nginx/templates/nginx.j2
+++ b/emailops-build/roles/build-nginx/templates/nginx.j2
@@ -18,14 +18,18 @@ mail {
     pop3_capabilities               "CAPA" "TOP" "UIDL" "RESP-CODES" "PIPELINING" "STLS" "USER" "SASL PLAIN LOGIN";
     imap_capabilities               "IMAP4rev1" "LITERAL+" "LOGIN-REFERRALS" "ID ENABLE" "IDLE SORT" "SORT=DISPLAY" "THREAD=REFERENCES" "THREAD=REFS" "MULTIAPPEND" "UNSELECT" "CHILDREN" "ESORT" "SEARCHRES" "WINTHIN" "CONTEXT=SEARCH" "QUOTA" "AUTH=PLAIN" "AUTH=LOGIN";
 
+    <% for host in hosts %>
+    ##
+    ## {{ domain }}
+    ##
     server {
-        listen                      110;
+        listen                      {{ host.port.pop3 }};
         protocol                    pop3;
         proxy                       on;
         starttls                    on;
 
-        ssl_certificate             "/etc/nginx/ssl/mail.{{ domain }}.crt";
-        ssl_certificate_key         "/etc/nginx/ssl/mail.{{ domain }}.key";
+        ssl_certificate             "/etc/nginx/ssl/mail.{{ host.domain }}.crt";
+        ssl_certificate_key         "/etc/nginx/ssl/mail.{{ host.domain }}.key";
         ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
         ssl_session_timeout         5m;
         ssl_ciphers                 "{{ include_ciphers }};
@@ -33,13 +37,13 @@ mail {
         ssl_dhparam                 /etc/nginx/ssl/dhparams-nginx.pem;
     }
     server {
-        listen                      143;
+        listen                      {{ host.port.imap }};
         protocol                    imap;
         proxy                       on;
         starttls                    on;
 
-        ssl_certificate             "/etc/nginx/ssl/mail.{{ domain }}.crt";
-        ssl_certificate_key         "/etc/nginx/ssl/mail.{{ domain }}.key";
+        ssl_certificate             "/etc/nginx/ssl/mail.{{ host.domain }}.crt";
+        ssl_certificate_key         "/etc/nginx/ssl/mail.{{ host.domain }}.key";
         ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
         ssl_session_timeout         5m;
         ssl_ciphers                 "{{ include_ciphers }};
@@ -47,13 +51,13 @@ mail {
         ssl_dhparam                 /etc/nginx/ssl/dhparams-nginx.pem;
     }
     server {
-        listen                      995;
+        listen                      {{ host.port.imaps }};
         protocol                    pop3;
         proxy                       on;
 
         ssl                         on;
-        ssl_certificate             "/etc/nginx/ssl/mail.{{ domain }}.crt";
-        ssl_certificate_key         "/etc/nginx/ssl/mail.{{ domain }}.key";
+        ssl_certificate             "/etc/nginx/ssl/mail.{{ host.domain }}.crt";
+        ssl_certificate_key         "/etc/nginx/ssl/mail.{{ host.domain }}.key";
         ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
         ssl_session_timeout         5m;
         ssl_ciphers                 "{{ include_ciphers }};
@@ -61,17 +65,18 @@ mail {
         ssl_dhparam                 /etc/nginx/ssl/dhparams-nginx.pem;
     }
     server {
-        listen                      993;
+        listen                      {{ host.port.pop3s }};
         protocol                    imap;
         proxy                       on;
 
         ssl                         on;
-        ssl_certificate             "/etc/nginx/ssl/mail.{{ domain }}.crt";
-        ssl_certificate_key         "/etc/nginx/ssl/mail.{{ domain }}.key";
+        ssl_certificate             "/etc/nginx/ssl/mail.{{ host.domain }}.crt";
+        ssl_certificate_key         "/etc/nginx/ssl/mail.{{ host.domain }}.key";
         ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
         ssl_session_timeout         5m;
         ssl_ciphers                 "{{ include_ciphers }};
         ssl_prefer_server_ciphers   on;
         ssl_dhparam                 /etc/nginx/ssl/dhparams-nginx.pem;
     }
+    <% endfor $>
 }
