--- a/distributeProfile/roles/installProfile/templates/ssh/config.j2
+++ b/distributeProfile/roles/installProfile/templates/ssh/config.j2
@@ -40,6 +40,4 @@ Host *
     XAuthLocation               = /usr/bin/xauth
     User                        = "{{ username }}"
     IdentitiesOnly              = yes
-    {% for keyfile in ssh_keyfiles %}
-      "IdentityFile                = ~/.ssh/{{ keyfile }}"
-    {% endfor %}
+    IdentityFile                = ~/.ssh/id_rsa
