--- a/emailops-build/roles/build-nginx/templates/auth.j2
+++ b/emailops-build/roles/build-nginx/templates/auth.j2
@@ -5,7 +5,7 @@
 <?php
     // Configuration
     $ldap_host = "ldap://{{ ldap_host }}:389/";
-    $ldap_pass = "{{ ldap_password }}";
+    $ldap_pass = "{{ ldap_admin_pass }}";
 
     // Make sure we were passed all necessary parameters.
     if (!isset($_SERVER["HTTP_AUTH_USER"])) { fail('Missing username parameter.'); }
