--- a/emailops-build/roles/build-nginx/templates/auth.j2
+++ b/emailops-build/roles/build-nginx/templates/auth.j2
@@ -4,7 +4,7 @@
 #==============================================================================
 <?php
     // Configuration
-    $ldap_host = "ldap://{{ ldap_host }}:389/";
+    $ldap_host = "{{ ldap_host }}";
     $ldap_pass = "{{ ldap_admin_pass }}";
 
     // Make sure we were passed all necessary parameters.
