By works, I meant 'doesnt work'.  Works now..

--- a/emailops-build/roles/build-ecelerity/templates/eccluster.j2
+++ b/emailops-build/roles/build-ecelerity/templates/eccluster.j2
@@ -61,7 +61,7 @@ msgc_client {
     server = ( "127.0.0.1:4809" )
 }
 
-include "msgc_server.conf"
+include "/opt/msys/ecelerity/etc/conf/global/msgc_server.conf"
 
 # Pull in auxillary information prepared by the installer; this must be the
 # last thing in the top level eccluster.conf file, as it is intended to overlay
