--- a/emailops-build/roles/build-ecelerity/templates/ecelerity-cluster.j2
+++ b/emailops-build/roles/build-ecelerity/templates/ecelerity-cluster.j2
@@ -88,6 +88,6 @@ cluster {
     #}
 }
 
-include "msgc_server.conf"
+include "/opt/msys/ecelerity/etc/conf/global/msgc_server.conf"
 
 # vim:ts=2:sw=2:et:ft=conf:
