--- a/emailops-build/roles/build-ecelerity/templates/eccluster.j2
+++ b/emailops-build/roles/build-ecelerity/templates/eccluster.j2
@@ -9,16 +9,6 @@ Security {
     Group = "{{ group_name }}"
 }
 
-# Reversible Encryption support
-# DO NOT DISABLE THIS if you added this during installation
-#
-# securecreds {}
-
-#Networking {
-#  bus = "4803"
-#  cluster_group = "ec_cluster"
-#}
-
 # Centralized logs are deposited here
 Logs {
     {% raw %}logfile = "/var/log/ecelerity/%Y/%m/%d/%{l}/%{s}/%{n}"{% endraw %}
@@ -55,13 +45,13 @@ ec_logger "ec_logger"
     #acctlog = "/var/log/ecelerity/acctlog.ec"
 }
 
-include "webui-common.conf"
+include "{{ install_dir }}/etc/conf/global/webui-common.conf"
 
 msgc_client {
     server = ( "127.0.0.1:4809" )
 }
 
-include "/opt/msys/ecelerity/etc/conf/global/msgc_server.conf"
+include "{{ install_dir }}/etc/conf/global/msgc_server.conf"
 
 # Pull in auxillary information prepared by the installer; this must be the
 # last thing in the top level eccluster.conf file, as it is intended to overlay
