--- a/emailops-build/roles/build-zimbra/templates/nginx.conf.web.https.default.j2
+++ b/emailops-build/roles/build-zimbra/templates/nginx.conf.web.https.default.j2
@@ -5,15 +5,14 @@ server
     ${core.ipboth.enabled}listen                  [::]:${web.https.port} default;
     ${core.ipv4only.enabled}listen                ${web.https.port} default;
     ${core.ipv6only.enabled}listen                [::]:${web.https.port} default ipv6only=on;
-    server_name             ${web.server_name.default}.default;
-    client_max_body_size    0;
-    ssl                     on;
-    ssl_prefer_server_ciphers ${web.ssl.preferserverciphers};
-    ssl_ciphers             ${web.ssl.ciphers};
-    ssl_certificate         ${ssl.crt.default};
-    ssl_certificate_key     ${ssl.key.default};
-    ssl_dhparam             {{ dhparam_output }};
-
+    server_name                 ${web.server_name.default}.default;
+    client_max_body_size        0;
+    ssl                         on;
+    ssl_prefer_server_ciphers   ${web.ssl.preferserverciphers};
+    ssl_certificate             ${ssl.crt.default};
+    ssl_certificate_key         ${ssl.key.default};
+    ssl_dhparam                 {{ dhparam_output }};
+    ssl_ciphers                 "{{ include_ciphers }}";
 
     location /
     {
